[build-system]
requires = ["setuptools>=61.0", "pyinstaller>=5.7.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
ianthe = ["icon.ico"]

[project]
name = "ianthe"
version = "2023.3.12.1"
description = "A simple Python executables build tool"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/thatsOven/ianthe"
